--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Constbase</title>
@@ -9,19 +10,55 @@
 </head>
 
 <body>
+    <div class="padding-top:20% text-align:center font-family:Lato font-size:2em">
+        <div class="padding-bottom:100px">
+            aaaaa
+        </div>
+        <div class="border:1px_solid_black background:#eee color:red">
+            fdsfdsfds
+        </div>
+        <!-- <div class="cssclass">
+        asdfdf
+    </div> -->
+        <!-- <div class="wrapper">
+        <h4 class="BOLD TEXT t_e_x_t">Typography</h4>
+        <h1>Header h1</h1>
+        <h2>Header h2</h2>
+        <h3>Header h3</h3>
+        <h4>Header h4</h4>
+        <h5>Header h5</h5>
+        <h6>Header h6</h6>
+        <p>p paragraph</p>
+    </div>
 
-    <start>
-        <h1>h1 Heading</h1>
-        <h2>h2 Heading</h2>
-        <h3>h3 Heading</h3>
-        <h4>h4 Heading</h4>
-        <h5>h5 Heading</h5>
-        <h6>h6 Heading</h6>
-    </start>
+    <div class="wrapper">
+        <h4 class="BOLD TEXT t_e_x_t">Utility</h4>
+        <p class="light">light</p>
+        <p class="LIGHT">LIGHT</p>
+        <p class="normal">normal</p>
+        <p class="bold">bold</p>
+        <p class="BOLD">BOLD</p>
+        <p class="text">text</p>
+        <p class="TEXT">TEXT</p>
+        <p class="Text">Text</p>
+    </div>
+
+    <div class="wrapper centerThis">
+        <h4 class="BOLD TEXT t_e_x_t">block</h4>
+    </div>
+    <div class="wrapper">
+        <div class="shadowThis paddingThis borderRadius borderThis notBlockThis">this is content</div>
+    </div>
+
+    <div class="wrapper centerContent padding-top-100px padding-bottom-100px">
+        <div class="gray paddingThis notBlockThis borderThis borderRadius"></div>
+    </div> -->
 
 
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="constbase.js" type="text/javascript">
+    </script>
 </body>
 
 </html>
