start working on the devPanal
start working on the devPanal

--- a/index.html
+++ b/index.html
@@ -2,27 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <title>Constbase</title>
 
     <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="public/css/constbase.css">
 </head>
 
-<body class="constbase light">
-        <div class="wrapper halfScream centerContent">
-            <div><h1>A fast and intuitive framework.</h1></div>
+<body class="constbase dev-mode">
+    <div class="">
+        <div class="wrapper half-scream center-content">
+            <div class="info-group text-responsive">
+                <h1 class="title LARGE Light TEXT">Constbase</h1>
+                <h1 class="body Light">Designed for human</h1>
+            </div>
+        </div>
+        <hr>
+        <div class="wrapper">
+            <div class="grid horizontal-center">
+                <div class="item">this is item this is item this is item this is item this is item</div>
+                <div class="item">this is item this is item this is item this is item this is item</div>
+                <div class="item">this is item this is item this is item this is item this is item</div>
+                <div class="item">this is item this is item this is item this is item this is item</div>
+            </div>
         </div>
         <hr>
         <div class="wrapper">
             <h4 class="BOLD TEXT t_e_x_t">Typography</h4>
-            <h1>Header h1</h1>
-            <h2>Header h2</h2>
-            <h3>Header h3</h3>
-            <h4>Header h4</h4>
-            <h5>Header h5</h5>
-            <h6>Header h6</h6>
-            <p>p paragraph</p>
+            <h1>Header h1: Hfajfdlkfjdsl;fdsk fjsdkl;jlkfjsdkf fasdj fkldsj fkldj fdj f;dsj fdslkj fdkls jfdskl jfd jfsdl jfsld fsd jfsdl jfds jfds jfdj fjf ljsdlfj djf lkdsfj ldf accesskey=" dsfk jdfljd sfj sl"<</h1>
+            <h2>Header h2: Hfajfdlkfjdsl; fdskfjsdkl;jlkfjsdkf fasdj fkldsj fkldj fdj f;dsj fdslkj fdkls jfdskl jfd jfsdl jfsld fsd jfsdl jfds jfds jfdj fjf ljsdlfj djf lkdsfj ldf accesskey=" dsfk jdfljd sfj sl"</h2>
+            <h3>Header h3: Hfajfdlkfjdsl; fdskfjsdkl;jlkfjsdkf fasdj fkldsj fkldj fdj f;dsj fdslkj fdkls jfdskl jfd jfsdl jfsld fsd jfsdl jfds jfds jfdj fjf ljsdlfj djf lkdsfj ldf accesskey=" dsfk jdfljd sfj sl"</h3>
+            <h4>Header h4: Hfajfdlkfjdsl; fdskfjsdkl;jlkfjsdkf fasdj fkldsj fkldj fdj f;dsj fdslkj fdkls jfdskl jfd jfsdl jfsld fsd jfsdl jfds jfds jfdj fjf ljsdlfj djf lkdsfj ldf accesskey=" dsfk jdfljd sfj sl"</h4>
+            <h5>Header h5: Hfajfdlkfjdsl; fdskfjsdkl;jlkfjsdkf fasdj fkldsj fkldj fdj f;dsj fdslkj fdkls jfdskl jfd jfsdl jfsld fsd jfsdl jfds jfds jfdj fjf ljsdlfj djf lkdsfj ldf accesskey=" dsfk jdfljd sfj sl"</h5>
+            <h6>Header h6: Hfajfdlkfjdsl; fdskfjsdkl;jlkfjsdkf fasdj fkldsj fkldj fdj f;dsj fdslkj fdkls jfdskl jfd jfsdl jfsld fsd jfsdl jfds jfds jfdj fjf ljsdlfj djf lkdsfj ldf accesskey=" dsfk jdfljd sfj sl"</h6>
+            <p>Header fajfdlkfjdsl;fdskfj sdkl;jlkfjsdkf fasdj fkldsj fkldj fdj f;dsj fdslkj fdkls jfdskl jfd jfsdl jfsld fsd jfsdl jfds jfds jfdj fjf ljsdlfj djf lkdsfj ldf accesskey=" dsfk jdfljd sfj sl"</p>
+            <div class="info-group text-justify">
+                <h1 class="title">HHHldd</h1>
+                <p class="body">Hfhajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;f</p>
+            </div>
+            <div class="info-group">
+                <h2 class="title">HHHldd</h2>
+                <p class="body">Hfhajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;hajdfjd djlkf jdsl d;f</p>
+            </div>
         </div>
 
         <div class="wrapper">
@@ -37,17 +58,13 @@
             <p class="Text">Text</p>
         </div>
 
-        <div class="wrapper centerThis">
+        <div class="wrapper center-content">
             <h4 class="BOLD TEXT t_e_x_t">block</h4>
         </div>
         <div class="wrapper">
-            <div class="shadowThis paddingThis borderRadius borderThis notBlockThis">this is content</div>
+            <div class="shadowed padding rounded bordered noblocked">this is content</div>
         </div>
-
-        <!-- <div class="wrapper centerContent padding-top-100px padding-bottom-100px">
-            <div class="gray paddingThis notBlockThis borderThis borderRadius"></div>
-        </div> -->
-
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="constbase.js" type="text/javascript">
     </script>
